test/users/wmikanik/domain64-badworkaround.good
domain64-badworkaround.chpl:8: error: invalid copy-initialization
domain64-badworkaround.chpl:8: error: initializing a range with boundKind.both from a range with boundKind.neither
